fixed server.js and .env file

--- a/portfolio-backend/.env
+++ b/portfolio-backend/.env
@@ -2,4 +2,4 @@ EMAIL_USER=dk203227@gmail.com
 EMAIL_PASS=udtaqzylljkukbtq  # (Remove spaces just in case)
 PORT=3500
 CLIENT_URL=https://deepakkhiraofficial.netlify.app/
-VITE_BACKEND_URL=http://localhost:3500
+VITE_BACKEND_URL=https://deepakkhiraofficail.onrender.com/
