--- a/portfolio-frontend/package.json
+++ b/portfolio-frontend/package.json
@@ -41,6 +41,8 @@
     "gh-pages": "^6.0.0",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-pages": "^0.33.1",
+    "vite-plugin-sitemap": "^0.8.2"
   }
 }
