--- a/portfolio-frontend/package.json
+++ b/portfolio-frontend/package.json
@@ -20,6 +20,7 @@
     "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.11.0",
+    "cookieconsent": "^3.1.1",
     "framer-motion": "^12.9.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
