--- a/portfolio-frontend/package.json
+++ b/portfolio-frontend/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.11.0",
     "cookieconsent": "^3.1.1",
