--- a/portfolio-backend/.env
+++ b/portfolio-backend/.env
@@ -1,5 +1,5 @@
 EMAIL_USER=dk203227@gmail.com
 EMAIL_PASS=udtaqzylljkukbtq  # (Remove spaces just in case)
 PORT=3500
-CLIENT_URL=https://deepakkhiraofficial.netlify.app
-VITE_BACKEND_URL=https://deepakkhiraofficail.onrender.com
+CLIENT_URL=https://deepakkhiraofficial.netlify.app/
+VITE_BACKEND_URL=https://deepakkhiraofficail.onrender.com/
