--- a/portfolio-frontend/package.json
+++ b/portfolio-frontend/package.json
@@ -14,7 +14,8 @@
     "start": "vite preview",
     "lint": "eslint .",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "optimize": "npx critical dist/index.html --inline --minify --base=dist/ --width=412 --height=915"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
@@ -45,6 +46,7 @@
     "postcss": "^8.5.3",
     "source-map-explorer": "^2.5.3",
     "vite": "^6.2.0",
+    "vite-plugin-html": "^3.2.2",
     "vite-plugin-pages": "^0.33.1",
     "vite-plugin-sitemap": "^0.8.2"
   }
