--- a/portfolio-backend/.env
+++ b/portfolio-backend/.env
@@ -3,3 +3,4 @@ EMAIL_PASS=udtaqzylljkukbtq  # (Remove spaces just in case)
 PORT=3500
 CLIENT_URL=https://deepakkhiraofficial.netlify.app
 VITE_BACKEND_URL=https://deepakkhiraofficail.onrender.com
+NODE_ENV=production
