--- a/portfolio-backend/.env
+++ b/portfolio-backend/.env
@@ -2,5 +2,5 @@ EMAIL_USER=dk203227@gmail.com
 EMAIL_PASS=udtaqzylljkukbtq  # (Remove spaces just in case)
 PORT=3500
 CLIENT_URL=https://deepakkhiraofficial.netlify.app
-VITE_BACKEND_URL=https://deepakkhiraofficail.onrender.com
+VITE_BACKEND_URL=https://deepakkhiraofficial.onrender.com
 NODE_ENV=production
