--- a/portfolio-frontend/package.json
+++ b/portfolio-frontend/package.json
@@ -24,8 +24,10 @@
     "axios": "^1.11.0",
     "cookieconsent": "^3.1.1",
     "framer-motion": "^12.23.12",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.5.0",
